--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.5",
+    "framer-motion": "^12.34.2",
     "livekit-client": "^2.17.1",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
