--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_URL=https://swaramapi.varsaka.com
-VITE_API_URL=http://localhost:4003
+VITE_API_URL=https://swaramapi.varsaka.com
+# VITE_API_URL=http://localhost:4003
