--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# VITE_API_URL=https://swaramapi.varsaka.com
-VITE_API_URL=http://localhost:4003
+VITE_API_URL=https://swaramapi.varsaka.com
+# VITE_API_URL=http://localhost:4003
 VITE_EMBED_URL=https://swaram.varsaka.com
